--- a/src/Blog/AdminBundle/Resources/views/Post/new.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Post/new.html.twig
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="title" class="col-lg-2 control-label">{{ "new.starting" | trans }}</label>
+                    <label for="title" class="col-lg-2 control-label">{{ "new.ending" | trans }}</label>
                     <div class="col-lg-10">
                         <input READONLY type="text" class="form-control" id="endingDate" name="endingDate"/>
                     </div>
